fav icon removed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Google</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="fav icon" href="media/google-fav.png">
+    <!-- <link rel="fav icon" href="media/google-fav.png"> -->
 </head>
 
 <body>
